feat(building-mass): 添加建筑体量系统及立面节奏处理
- 初始化 BuildingMass 系统（建筑体量规则系统）
- 实现 BuildingMassPipeline 完整流程管道
- 添加 BuildingMassSystemIntegrator 系统集成器
- 实现 FacadeRhythmProcessor 立面节奏处理器
- 添加 BuildingMassToBlockPatchConverter 转换器
- 重构 geometry 相关代码优化性能
- 移除 PlanNormalizationStepV1 的空值检查
- 更新 Polyline2D 使用 getFirst/getLast 方法
- 添加 RectMask 坐标获取方法
- 添加 BUILDING_MASS_SYSTEM_INTEGRATION 和 FACADE_RHYTHM_SYSTEM 文档